--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ html {
 	display: flex;
 	box-sizing: border-box;
 	min-height: 100%;
+	font-family: Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
 }
 
 body {
@@ -11,8 +12,25 @@ body {
 	border: 6px solid #000;
 }
 
-.slogan {
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 48px;
+.main {
+	margin: 160px;
+	h1 {
+		font-size: 48px;
+	}
+	p {
+		font-size: 20px;
+		width: 400px;
+		line-height: 1.8;
+	}
+	.mailme {
+		padding: 10px;
+		border: 2px solid #666;
+		color: #000;
+		text-decoration: none;
+		transition: 0.4s;
+		&:hover {
+			background: #666;
+			color: #fff;
+		}
+	}
 }
