--- a/style.scss
+++ b/style.scss
@@ -34,3 +34,23 @@ body {
 		}
 	}
 }
+
+.underline-animation {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: -4px;
+		left: 0;
+		width: 100%;
+		height: 2px;
+		background: #000;
+		transform: scale(0);
+		transition: 0.5s;
+	}
+	&:hover:after {
+		transform: scale(1);
+	}
+}
