--- a/style.scss
+++ b/style.scss
@@ -23,14 +23,30 @@ body {
 		line-height: 1.8;
 	}
 	.mailme {
+		display: inline-block;
+		position: relative;
 		padding: 10px;
 		border: 2px solid #666;
 		color: #000;
 		text-decoration: none;
 		transition: 0.4s;
-		&:hover {
-			background: #666;
+		overflow: hidden;
+		&:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: rgba(30, 30, 30, 0.4);
 			color: #fff;
+			transition: 0.5s;
+			transform: translate3d(-100%, 0, 0);
+		}
+		&:hover {
+			&:after {
+				transform: translate3d(0, 0, 0);
+			}
 		}
 	}
 }
