--- a/style.scss
+++ b/style.scss
@@ -22,15 +22,18 @@ body {
 		width: 400px;
 		line-height: 1.8;
 	}
-	.mailme {
+	.btn {
 		display: inline-block;
 		position: relative;
+		min-width: 100px;
 		padding: 10px;
+		margin-right: 20px;
 		border: 2px solid #666;
 		color: #000;
 		text-decoration: none;
 		transition: 0.4s;
 		overflow: hidden;
+		text-align: center;
 		&:after {
 			content: '';
 			position: absolute;
@@ -38,10 +41,10 @@ body {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background: rgba(30, 30, 30, 0.4);
+			background: rgba(200, 200, 200, 0.4);
 			color: #fff;
 			transition: 0.5s;
-			transform: translate3d(-100%, 0, 0);
+			transform: translate3d(-101%, 0, 0);
 		}
 		&:hover {
 			&:after {
