--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 html {
 	display: flex;
 	box-sizing: border-box;
-	min-height: 100%;
+	min-height: 100vh;
 	font-family: Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
 }
 
@@ -10,6 +10,17 @@ body {
 	margin: 0;
 	padding: 20px;
 	border: 6px solid #000;
+}
+
+a,
+a:link {
+	text-decoration: none;
+	color: rgb(219, 59, 33);
+	transition: .4s;
+}
+
+a:hover {
+	color: rgba(219, 59, 33, 0.7);
 }
 
 .main {
@@ -34,22 +45,9 @@ body {
 		transition: 0.4s;
 		overflow: hidden;
 		text-align: center;
-		&:after {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background: rgba(200, 200, 200, 0.4);
-			color: #fff;
-			transition: 0.5s;
-			transform: translate3d(-101%, 0, 0);
-		}
 		&:hover {
-			&:after {
-				transform: translate3d(0, 0, 0);
-			}
+			background-color: rgba(0, 0, 0, 0.8);
+			color: #eee;
 		}
 	}
 }
@@ -57,11 +55,10 @@ body {
 .underline-animation {
 	position: relative;
 	display: inline-block;
-	cursor: pointer;
 	&:after {
 		content: '';
 		position: absolute;
-		bottom: -4px;
+		bottom: -2px;
 		left: 0;
 		width: 100%;
 		height: 2px;
