--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,15 @@
-html {
-	display: flex;
+* {
 	box-sizing: border-box;
-	min-height: 100vh;
+}
+
+html {
+	box-sizing: border-box;
 	font-family: Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
 }
 
 body {
-	flex: 1;
+	width: 100%;
+	height: 100vh;
 	margin: 0;
 	padding: 20px;
 	border: 6px solid #000;
@@ -24,7 +27,6 @@ a:hover {
 }
 
 .main {
-	margin: 160px;
 	h1 {
 		font-size: 48px;
 	}
@@ -68,5 +70,11 @@ a:hover {
 	}
 	&:hover:after {
 		transform: scale(1);
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.main {
+		margin: 160px;
 	}
 }
